fixed overflow problem with landing and home page

--- a/Webpage Version/project-gg/src/styles/Home.css
+++ b/Webpage Version/project-gg/src/styles/Home.css
@@ -3,9 +3,9 @@ body {
   overflow-x: hidden;
 }
 .HomeContainer {
-  display: flex;
+  /* display: flex;
   flex-flow: column;
-  height: 100%;
+  height: 100%; */
   width: 100%;
 
   color: white;
