--- a/Webpage Version/project-gg/src/styles/SignupPage.css
+++ b/Webpage Version/project-gg/src/styles/SignupPage.css
@@ -1,27 +1,26 @@
-body {
-  overflow-y: hidden;
-}
 .superContainer {
   overflow-y: hidden;
-
-  /* border-style: solid;
-  border-width: 2px; */
+  height: 100%;
+  width: 100%;
+  box-sizing: border-box;
 }
 .container {
   display: flex;
   flex-direction: row;
   align-items: center;
   width: 100%;
-  height: 100%;
+  box-sizing: border-box;
 
   /* border-style: solid;
-  border-width: 2px; */
+  border-width: 10px; */
 }
 .leftUI {
   width: 80%;
+  box-sizing: border-box;
 
   /* border-style: solid;
-  border-width: 2px; */
+  border-width: 2px;
+  border-color: #666666; */
 }
 .controllerImage {
   display: block;
@@ -29,11 +28,13 @@ body {
   min-height: 474px;
   width: auto;
   height: auto;
+  box-sizing: border-box;
   align-self: flex-end;
   margin-top: 24px;
 
   /* border-style: solid;
-  border-width: 2px; */
+  border-width: 2px;
+  border-color: #a88181; */
 }
 .topUI {
   display: flex;
@@ -51,6 +52,7 @@ body {
   min-height: 359px;
   width: auto;
   height: auto;
+  box-sizing: border-box;
 
   /* border-style: solid;
   border-width: 2px; */
@@ -71,6 +73,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 70%;
+  box-sizing: border-box;
   float: right;
 
   background-color: white;
@@ -96,7 +99,7 @@ body {
   /* border-style: solid;
   border-width: 2px; */
 }
-.AccountRequirements p {
+.AccountRequirements li {
   margin: 0px;
   margin-bottom: 12px;
 
@@ -104,6 +107,7 @@ body {
   border-width: 2px; */
 }
 .AccountWindow input[type="text"] {
+  box-sizing: border-box;
   width: 90%;
   text-align: left;
   align-self: center;
@@ -123,6 +127,7 @@ body {
 }
 .AccountNoteSection {
   width: 80%;
+  box-sizing: border-box;
   margin-top: 26px;
   margin-bottom: 34px;
   font-size: 24px;
@@ -148,6 +153,7 @@ body {
   margin-bottom: 18px;
   margin-top: 8px;
   width: 90%;
+  box-sizing: border-box;
 
   /* border-style: solid;
   border-width: 2px; */
