--- a/Webpage Version/project-gg/src/styles/component.css
+++ b/Webpage Version/project-gg/src/styles/component.css
@@ -2,7 +2,6 @@
 body {
   margin: 0;
   font-family: Bahnschrift;
-  height: 100%;
   width: 100%;
   box-sizing: border-box;
   background: linear-gradient(to right, #ea6341, #2c265a) fixed;
