--- a/Webpage Version/project-gg/src/styles/matt.css
+++ b/Webpage Version/project-gg/src/styles/matt.css
@@ -1,8 +1,4 @@
-body {
-  overflow-y: hidden;
-}
 .container {
-  height: 100%;
   width: 100%;
 }
 .controllerImage {
